assets/css/style.css
/* ... */
/* Welcome area*/

.welcome {
  display: flex;
  justify-content: center;
} 

.welcome-logo {
  font-family: 'Great Vibes';
  color: rgb(197, 157, 95);
  font-size: 5rem;
}

.welcome-text {
  max-width: 70%;
 justify-content:center ;
 text-align: center;
 letter-spacing: .1rem;
}




/* Offers area */

.offers {
  margin-top: 3rem;
  margin-bottom: 3rem;
}
.offers-card {
  margin: 0.5rem;
  color: #fff;
  letter-spacing: .2rem;
}

.carv-card {
  background-image: url(../images/carvery-images/carv6.webp);
}

.acom-card {
  background-image: url(../images/acom-images/accom-hero.webp);
}

.food-card {
  background-image: url(../images/food.webp);
}

.funct-card {
  background-image: url(../images/func1.webp);
}

.card p {
  color: #fff;
}

.offers-card h2 {
  font-size: 4rem;
  margin-bottom:2rem ;

}


.cards-btn {
  margin-top: 2rem;
  border-radius: 0.5rem;
}

/* Function room & Photos carousel */

.function-area {
  display: flex;
  justify-content: center;
  padding-top: 2rem;
  padding-bottom: 2rem;
}

.function-text {
  max-width: 70%;
  justify-content:center ;
  text-align: center;
  margin-bottom: 5rem;
  letter-spacing: .1rem;
  
 }


.function-photos img{
  width: 100%;
  height: 100vh;
  object-fit: cover;
}


  /* Funtions area */

  .function-header {
    margin-bottom: 3rem;
  }
      .container-functions-photos{
        position: relative;
      }
  
      .function-photos-header{
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
        z-index: 1;
      }
      .container-functions-photos-hero img{
        filter: brightness(55%);
      }
  
   /* .container-functions-photos h1, */
   .container-functions-photos p{
    color: white;
    }
    
/* Contact area */



.contact {
  margin-top: 3.5rem; 
  color: srgb(112,128,144);
  margin-bottom: 3.5rem;
}

.contact-card {
  margin: 0.5rem;
  color:#546270;
  border: 0.2rem solid  rgb(197, 157, 95);
}

.contact-card h2 {
  margin-bottom: 2rem;
}

.contact-card p {
  color: #546270;
  margin: 0.2rem;
}

.contact-card-page {
  height: 70rem;
}

.google-map-contact {
  height: 62rem;
}  .contact-card-page {
  border: 0;
}

 .contact-h2 {
  color: #546270;
} 

.contact-card-page button + h2{
  margin-top: 4rem;
}




/* Map area */

.footer-map {
  width: 100%;
  height: fit-content;
}

.google-map {
  width: 100%;
}



/* Footer area */

.footer{
  background-color: #546270;
  width: 100%;
  font-size: 2rem;
  padding-top: 25px;
  padding-bottom: 25px;

}
  
.social-networks {
  color: rgb(197, 157, 95);
  font-size: 3rem;
}
.footer  p {
  color: #fff;
  margin-bottom: 0;
}


.footer-info {
  width: 100%;
  background-color: #546270;
  color: #fff;

}

.footer-logo{
  font-family: 'Great Vibes', serif;
  color: rgb(197, 157, 95);
  font-size: 5rem;

}
.footer-nav{
  margin-bottom: 15px;
}


/* Gallery page */

.gallery {
  margin-top: 3rem;
}

.gallery .column--50 {
  margin: 1rem;
}

.gallery img {
  width: 100%;
  height: 30rem;
  object-fit: cover;
  transition: ease-in-out .4s;
  box-shadow: 5px 1px 12px -2px black;
  border-radius: 0.1rem;
  cursor: pointer;
}

.gallery img:hover {
  transform: scale(1.04);
}

/* Gallery modal */
.modal {
  display: none;
  position: fixed;
  z-index: 999;
  padding-top: 60px;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: rgba(84, 98, 112, 0.7);
}

.modal-content {
  margin: auto;
  display: block;
  width: 80%;
  max-width: 700px;
}

.modal-content img {
  margin: auto;
  display: block;
  width: 100%;
  height: auto;
}

.close {
  position: absolute;
  top: 15px;
  right: 35px;
  color: #fff;
  font-size: 40px;
  font-weight: bold;
  transition: color 0.25s ease-out;
  cursor: pointer;
}
.close:hover {
  color: rgb(197, 157, 95);
}

/* Carvery page */

.hero-carvery{
  background-image: url("../images/carvery-images/carv2.webp");
  /* filter: brightness(55%); */
}

.carvery-card {
  margin: 0.5rem;
  color:#546270;
}

.carvery-card h2 {
  margin-bottom: 2rem;
  margin-top: 2rem;
}

.carvery-card p {
  color: #546270;
  margin: 0.2rem;
}

.menu-links {
  color: #9e7739;
  text-decoration: underline;
}


/* Rooms poage */

.hero-accommodation{
  background-image: url("../images/acom-images/accom-hero.webp");
}






/************************************* Media Queries ***************************************************************************/

/*  Mobile */
@media only screen and (min-width: 1px) and (max-width: 639px){


  /* Grid system */
    /* global */
    .column--50{
      width: calc(100% - 30px);
    }

   /* specific */
  .column--m50{
    width: calc(50% - 30px);
  }
  .column--m100{
    width: calc(100% - 30px);
  }
  .column--mshrink{
    width: auto;
    flex: none;
  }
  /* Font sizes */
  .welcome-logo {
    font-size: 4rem;
  }

  .logo-single {
    font-size: 7rem;
  }

  /* Hero section */

  .hero-text {
    font-size: 3rem;
  margin-bottom: 2rem;
  letter-spacing: .2rem;
  }

  .welcome-text {
    max-width: 100%;
   justify-content:center ;
   text-align: center;
   
  }

  .welcome-logo {
    max-width: 100%;
  }
  
  .function-text {
    max-width: 100%;
   justify-content:center ;
   text-align: center;
  
  }

  


  /* Mobile Nav */
  .desktop-nav {
    display: none !important;
  }
      .header ul {
        padding-bottom: 20px;
        display: flex;
        flex-direction: column;           
  }

  .header {
    background-color: #546270;
    box-shadow: 5px 1px 12px -2px black;
  }
  
}
/* ... */

